[tool.poetry]
name = "fastapi-template"
version = "0.0.1"
description = "Template project using FastAPI framework"
authors = ["Jerzy Pawlikowski <me@jerzypawlikowski.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
