[project]
name = "fastapi-template"
version = "0.0.1"
description = "Template project using FastAPI framework"
authors = [{ name = "Jerzy Pawlikowski", email = "me@jerzypawlikowski.pl" }]
requires-python = "~=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi>=0.116.0,<1",
    "uvicorn[standard]>=0.35.0,<1",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0,<5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/main"]
